tests/baselines/reference/awaitInClassInAsyncFunction.errors.txt
awaitInClassInAsyncFunction.ts(9,15): error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.


==== awaitInClassInAsyncFunction.ts (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/34887
    
    async function bar() {
        return 2;
    }
    
    async function foo() {
        return new class {
            baz = await bar();
                  ~~~~~
!!! error TS1308: 'await' expressions are only allowed within async functions and at the top levels of modules.
        };
    }
    